--- a/flying_over/flying_over.html
+++ b/flying_over/flying_over.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/p5_style.css">
     <title>p5 | Flying Over</title>
+    <style> body {padding: 0; margin: 20;} </style>
     <script src="../p5.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
