Update the html file

--- a/flying_over/index.html
+++ b/flying_over/index.html
@@ -11,6 +11,6 @@
     <script src="flying_over.js"></script>
   </head>
   <body>
-    <h2>fly over the terrain...</h2>
+    <h2>fly over the mountains...</h2>
   </body>
 </html>
