--- a/10print/index.html
+++ b/10print/index.html
@@ -15,7 +15,7 @@
   <body>
     <h2>
       <i class="fas fa-code"></i>
-      <span> 10 Print in p5 from D. Shiffman's tutorial (in Processing)&nbsp;</span>
+      <span> 10 Print in p5 from D. Shiffman's tutorial&nbsp;</span>
       <a href="https://www.youtube.com/watch?v=bEyTZ5ZZxZs" target="_blank"><i class="fas fa-external-link-alt"></i></a>
     </h2>
   </body>
