SPA for the p5 works initiated

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="menu">
       <a class="mitem" id="10print" href="javascript:void(0)">10_print</a>
       <a class="mitem" id="beziers" href="javascript:void(0)">flying_beziers</a>
+      <a class="mitem" id="charshift" href="javascript:void(0)">characher_shift</a>
       <a class="mitem" id="flyover" href="javascript:void(0)">fly_over</a>
       <a class="mitem" id="maurer" href="javascript:void(0)">maurer_rose</a>
       <a class="mitem" id="recursion" href="javascript:void(0)">recusion_1</a>
