repo link added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a class="mitem" id="walk_02" href="javascript:void(0)">walk_2</a>
     </div>
     <div class="close"><a href="javascript:void(0)">⨉</a></div>
+    <div class="link"><a href="https://github.com/farzadgo/p5js-works" target="_blank">repository link 🡥</a></div>
     <script src="app.js"></script>
   </body>
 </html>
