--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="black" />
     <link type="text/css" rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- <script src="https://kit.fontawesome.com/25817834a5.js" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
     <title>farzadgo.p5_works</title>
@@ -20,8 +22,9 @@
       <a class="mitem" id="walk_01" href="javascript:void(0)">walk_1</a>
       <a class="mitem" id="walk_02" href="javascript:void(0)">walk_2</a>
     </div>
-    <div class="close"><a href="javascript:void(0)">⨉</a></div>
-    <div class="link"><a href="https://github.com/farzadgo/p5js-works" target="_blank">repository 🔗</a></div>
+
+    <div class="controls"></div>
+
     <script src="app.js"></script>
   </body>
 </html>
